examples/test/testpolicy12417.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12417
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key28: value8
      key21: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value1
          key4: value30
          key25: value1
      podSelector:
        matchLabels:
          key18: value2
          key35: value2
          key8: value15
